# AuditBase

./: .gitignore  .~lock.what’s left for AuditBase.odt#  AuditBase.odt  ENHANCEMENT_REPORT.md  Makefile  README.md  VerifiedBoundaryHelpers.v  VerifiedHelpers.v  audit_report.json  audit_report_array.json  dune-project  kpmg_demo.sh  test_all_domains.sh  test_domain_loader.ml  test_integration.ml  test_module_access.ml  test_modules.cmi  test_modules.cmx  test_modules.ml  what’s left for AuditBase.odt
_build/: .db  .digest-db  log
_build/default/: META.veribound-process-architecture  README.md  veribound-process-architecture.dune-package  veribound-process-architecture.install
boundary_logic/domain_definitions/: aqi.yaml  nuclear_radiation_limits.yaml  pharma_dose_safety.yaml
boundary_logic/pathological_tests/: global_bounds_violation.yaml  mixed_issues.yaml  multiple_gaps.yaml  overlaps.yaml
classification_runtime/boundary_engine/: classifier.ml  dune
cli_logic/: dune  veribound_audit.ml  veribound_inspect.ml  veribound_pipeline.ml  veribound_verify.ml
demo/: veribound_cli_demo.sha256  veribound_cli_demo.sha256.asc
lib/audit/: audit_generators.ml  audit_properties.ml  audit_runner.ml  audit_types.ml  dune
test_integration/: dune  test_priority_2a.ml
test_runner/: debug_boundaries.ml  debug_parsing  debug_parsing.cmi  debug_parsing.cmo  debug_parsing.ml  dune  dune.backup  test_boundary_classifier.ml  test_domain_loader.ml  test_multiple_domains.ml
test_support/: check_overlap_and_coverage.ml  dune
veribound_cli_demo/: README.md  run_demo.sh
(+213 files in other folders)
