(executable
 (public_name test_domain_loader)
 (name test_domain_loader)
 (libraries veribound-process-architecture.engine_interface))
(executable
 (public_name debug_boundaries)
 (name debug_boundaries)
 (libraries veribound-process-architecture.engine_interface))
(executable
 (public_name test_multiple_domains)
 (name test_multiple_domains)
 (libraries veribound-process-architecture.engine_interface))
(executable
 (public_name debug_final_boundaries)
 (name debug_final_boundaries)
 (libraries veribound-process-architecture.engine_interface))
(executable
 (public_name test_boundary_classifier)
 (name test_boundary_classifier)
 (libraries veribound-process-architecture.engine_interface))
(executable
 (public_name test_overlap_check)
 (name test_overlap_check)
 (modules test_overlap_check)
 (libraries veribound-process-architecture.engine_interface yojson test_support))
